# parallel_computing_tutorial

./: .gitignore  README.md
code/basic/: .gitignore  README.md
code/basic/project1/: README.md  main.cpp
code/basic/project2/: README.md  compile.sh  main.cpp  matmul.cpp
code/basic/project2/data/: README.md  matrix_process.cpp  process_record.md
code/basic/project2/include/: matmul.h
code/basic/project2/src/: matmul.cpp
code/basic/project3/: Makefile  README.md  main.c
code/basic/project3/data/: matrix_process.c
code/basic/project3/include/: matrix.h
code/basic/project3/openblas_test/: Makefile  test_cblas.c  test_cblas_open.c  time_dgemm.c
code/basic/project3/src/: SIMD_matrix.c  cuda_matrix.cu  matrix.c  thread_matrix.c
code/basic/project4/: CMakeLists.txt  README.md
code/basic/project4/include/: myMatrix.hpp
code/basic/project4/oepnCVMat/: CMakeLists.txt
code/basic/project4/openCVMat/: CMakeLists.txt
code/basic/project4/src/: Mymatrix.cpp  main.cpp  myMatrix.cpp
code/basic/project5/: CMakeLists.txt  README.md
code/basic/project5/include/: function.hpp  mat.hpp  model_params.hpp  utils.hpp
code/basic/project5/src/: face_binary_cls.cpp  function.cpp  main.cpp  matrix.cpp
code/basic/project6/: README.md
code/concurrent/: README.md
code/cuda/: README.md
code/cuda/basic/chapter01/: hello.cu
code/cuda/basic/chapter02/: checkDeviceInfor.cu  checkDimension.cu  checkThreadIndex.cu  defineGridBlock.cu  sumArraysOnGPU-timer.cu  (+5 more)
code/cuda/basic2/: main.cu
docs/: README.md  _sidebar.md  index.html
docs/chapter/: ch01.md  ch02.md
(+10 files in other folders)
